5장 클러스터 구축하기 정리